--- a/app/src/main/res/layout/activity_photo_slider.xml
+++ b/app/src/main/res/layout/activity_photo_slider.xml
@@ -12,13 +12,13 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/photosPhotoSliderPager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!--<ProgressBar
+    <ProgressBar
         android:id="@+id/loadingPhotoSliderProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,5 +26,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
--->
 </androidx.constraintlayout.widget.ConstraintLayout>
