--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -370,7 +370,7 @@
         <item name="android:orientation">horizontal</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@color/mainBlue</item>
+        <item name="android:layout_margin">@dimen/default_small_margin</item>
     </style>
 
     <style name="ratingBarColors" parent="@android:style/Widget.RatingBar">
