--- a/app/src/main/res/layout/activity_edit_service.xml
+++ b/app/src/main/res/layout/activity_edit_service.xml
@@ -79,7 +79,8 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/descriptionEditServiceInput"
                     style="@style/materialInput"
-                    android:inputType="textCapSentences" />
+                    android:inputType="textMultiLine|textCapSentences"
+                    android:maxLines="10" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
