--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -24,7 +24,7 @@
         android:layout_height="0dp"
         android:layout_margin="2dp"
         android:scrollbars="none"
-        app:layout_constraintBottom_toTopOf="@+id/scheduleServiceBtn"
+        app:layout_constraintBottom_toTopOf="@+id/bottomPanel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topPanel">
@@ -39,87 +39,134 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <LinearLayout
-                    android:id="@+id/ratingBlockServiceLayout"
+                <com.google.android.material.card.MaterialCardView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/withoutRatingServiceText"
-                        style="@style/mainBlockText"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="Оценок еще нет" />
+                    android:layout_height="wrap_content">
 
                     <LinearLayout
-                        android:id="@+id/ratingServiceLayout"
+                        android:id="@+id/ratingBlockServiceLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:orientation="horizontal">
-
-                        <me.zhanghai.android.materialratingbar.MaterialRatingBar
-                            android:id="@+id/ratingServiceRatingBar"
-                            style="@android:style/Widget.Holo.RatingBar.Small"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="5dp"
-                            android:theme="@style/ratingBarColors" />
+                        android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/ratingServiceText"
-                            style="@style/defaultText"
-                            android:layout_width="wrap_content"
+                            android:id="@+id/withoutRatingServiceText"
+                            style="@style/mainBlockText"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:text="0" />
+                            android:text="Оценок еще нет" />
 
-                        <TextView
-                            android:id="@+id/countOfRatesServiceText"
-                            style="@style/defaultText"
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:id="@+id/ratingServiceLayout"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="0" />
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
+                            <me.zhanghai.android.materialratingbar.MaterialRatingBar
+                                android:id="@+id/ratingServiceRatingBar"
+                                style="@android:style/Widget.Holo.RatingBar.Small"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginEnd="5dp"
+                                android:theme="@style/ratingBarColors" />
+
+                            <TextView
+                                android:id="@+id/ratingServiceText"
+                                style="@style/defaultText"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:text="0" />
+
+                            <TextView
+                                android:id="@+id/countOfRatesServiceText"
+                                style="@style/defaultText"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="0" />
+                        </LinearLayout>
                     </LinearLayout>
-                </LinearLayout>
+                </com.google.android.material.card.MaterialCardView>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    style="@style/materialInputLayout"
-                    android:hint="Цена"
-                    app:startIconDrawable="@drawable/icon_dollar_sign_solid">
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/costServiceText"
-                        style="@style/materialInput"
-                        android:inputType="textCapSentences" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
 
-                </com.google.android.material.textfield.TextInputLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:padding="16dp">
 
-                <com.google.android.material.textfield.TextInputLayout
-                    style="@style/materialInputLayout"
-                    android:hint="Адрес"
-                    app:startIconDrawable="@drawable/icon_map_marked_solid">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/cost"
+                                android:textAppearance="?attr/textAppearanceHeadline6" />
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/addressServiceText"
-                        style="@style/materialInput"
-                        android:inputType="textCapSentences" />
+                            <TextView
+                                android:id="@+id/costServiceText"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="8dp"
+                                android:text="@string/cost"
+                                android:textAppearance="?attr/textAppearanceBody2"
+                                android:textColor="?android:attr/textColorSecondary" />
+                        </LinearLayout>
 
-                </com.google.android.material.textfield.TextInputLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:padding="16dp">
 
-                <com.google.android.material.textfield.TextInputLayout
-                    style="@style/materialInputLayout"
-                    android:hint="Описание:"
-                    app:startIconDrawable="@drawable/icon_file_alt_regular">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/address"
+                                android:textAppearance="?attr/textAppearanceHeadline6" />
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/descriptionServiceText"
-                        style="@style/materialInput"
-                        android:inputType="textCapSentences" />
+                            <TextView
+                                android:id="@+id/addressServiceText"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="8dp"
+                                android:text="@string/address"
+                                android:textAppearance="?attr/textAppearanceBody2"
+                                android:textColor="?android:attr/textColorSecondary" />
+                        </LinearLayout>
 
-                </com.google.android.material.textfield.TextInputLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:padding="16dp">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/description"
+                                android:textAppearance="?attr/textAppearanceHeadline6" />
+
+                            <TextView
+                                android:id="@+id/descriptionServiceText"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="8dp"
+                                android:text="@string/description"
+                                android:textAppearance="?attr/textAppearanceBody2"
+                                android:textColor="?android:attr/textColorSecondary" />
+                        </LinearLayout>
+
+                    </LinearLayout>
+                </com.google.android.material.card.MaterialCardView>
 
                 <fragment
                     android:id="@+id/premiumBlockService"
@@ -133,34 +180,28 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_margin"
                 android:orientation="vertical"
                 app:layout_constraintTop_toBottomOf="@+id/mainServiceLayout">
 
-                <LinearLayout
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/photosServiceRecycleView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/photosServiceRecycleView"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:scrollbars="none" />
-                </LinearLayout>
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:scrollbars="none" />
             </LinearLayout>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/scheduleServiceBtn"
+                style="@style/mainButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Расписание" />
         </LinearLayout>
     </ScrollView>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/scheduleServiceBtn"
-        style="@style/mainButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Расписание"
-        app:layout_constraintBottom_toTopOf="@+id/bottomPanel"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <include layout="@layout/part_bottom_panel" />
 
