--- a/app/src/main/res/layout/element_photo.xml
+++ b/app/src/main/res/layout/element_photo.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/default_margin"
+    android:layout_margin="@dimen/default_small_margin"
     android:orientation="vertical">
 
     <ImageView
