--- a/app/src/main/res/layout/found_service_element.xml
+++ b/app/src/main/res/layout/found_service_element.xml
@@ -1,76 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/foundServiceElementLayout"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:layout_marginBottom="4dp"
+    android:layout_height="75dp"
+    android:layout_marginBottom="@dimen/default_small_margin"
+    android:layout_marginStart="@dimen/default_small_margin"
+    android:layout_marginEnd="@dimen/default_small_margin"
     android:background="@drawable/block_text"
-    android:orientation="horizontal"
-    android:padding="8dp">
+    android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="@dimen/photo_avatar_width"
-        android:layout_height="@dimen/photo_avatar_height"
-        android:layout_marginEnd="10dp">
-
-        <ImageView
-            android:id="@+id/avatarFoundServiceElementImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:srcCompat="@tools:sample/avatars" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/foundServiceElementLayout"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:paddingTop="5dp">
+        android:checkable="true"
+        android:clickable="true"
+        android:focusable="true">
 
-        <TextView
-            android:id="@+id/serviceNameFoundServiceElementText"
-            style="@style/mainTextMainScreen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Имя услуги"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/cityFoundServiceElementText"
-            style="@style/defaultTextMainScreen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Город" />
-
-        <me.zhanghai.android.materialratingbar.MaterialRatingBar
-            android:id="@+id/ratingBarFondServiceElement"
-            style="@android:style/Widget.Holo.RatingBar.Small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
-            android:theme="@style/ratingBarColors" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="90dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/userNameFoundServiceElementText"
-            style="@style/defaultTextMainScreen"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Имя человека" />
+            android:layout_height="match_parent"
+            android:baselineAligned="false"
+            android:orientation="horizontal"
+            android:padding="8dp">
 
-        <TextView
-            android:id="@+id/costFoundServiceElementText"
-            style="@style/defaultTextMainScreen"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Цена" />
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="@dimen/photo_avatar_width"
+                android:layout_height="@dimen/photo_avatar_height"
+                android:layout_marginEnd="10dp">
+
+                <ImageView
+                    android:id="@+id/avatarFoundServiceElementImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:srcCompat="@tools:sample/avatars" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:paddingTop="5dp">
+
+                <TextView
+                    android:id="@+id/serviceNameFoundServiceElementText"
+                    style="@style/mainTextMainScreen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Имя услуги"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/cityFoundServiceElementText"
+                    style="@style/defaultTextMainScreen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Город" />
+
+                <me.zhanghai.android.materialratingbar.MaterialRatingBar
+                    android:id="@+id/ratingBarFondServiceElement"
+                    style="@android:style/Widget.Holo.RatingBar.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    android:theme="@style/ratingBarColors" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="90dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/userNameFoundServiceElementText"
+                    style="@style/defaultTextMainScreen"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Имя человека" />
+
+                <TextView
+                    android:id="@+id/costFoundServiceElementText"
+                    style="@style/defaultTextMainScreen"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Цена" />
+            </LinearLayout>
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
+
 </LinearLayout>
