--- a/app/src/main/res/layout/element_dialog.xml
+++ b/app/src/main/res/layout/element_dialog.xml
@@ -1,80 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/dialogElementLayout"
     style="@style/block"
-    android:padding="3dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/block_text"
-    android:orientation="horizontal"
     tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.adapters.elements.chatElements.DialogElement">
 
-    <LinearLayout
-        android:id="@+id/dialogElementLayoutSecond"
-        android:layout_width="wrap_content"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/dialogElementLayout"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white">
-
-        <ImageView
-            android:id="@+id/avatarDialogElementImage"
-            android:layout_width="@dimen/photo_avatar_width"
-            android:layout_height="@dimen/photo_avatar_height"
-            android:layout_marginEnd="10dp"
-            android:background="@color/white"
-            tools:src="@tools:sample/avatars" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/dialogElementLayoutLast"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="@color/white"
-        android:orientation="horizontal">
+        android:checkable="true"
+        android:clickable="true"
+        android:focusable="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:baselineAligned="false"
+            android:orientation="horizontal"
+            android:padding="8dp">
 
-            <TextView
-                android:id="@+id/nameDialogElementText"
-                style="@style/mainTextMainScreen"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Name" />
-
-            <TextView
-                android:id="@+id/lastMessageDialogElementText"
-                android:textColor="@color/grey"
-                android:layout_width="match_parent"
-                android:fontFamily="@font/roboto_medium"
+            <LinearLayout
+                android:id="@+id/dialogElementLayoutSecond"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Name" />
+                android:background="@color/white">
 
+                <ImageView
+                    android:id="@+id/avatarDialogElementImage"
+                    android:layout_width="@dimen/photo_avatar_width"
+                    android:layout_height="@dimen/photo_avatar_height"
+                    android:layout_marginEnd="10dp"
+                    android:background="@color/white"
+                    tools:src="@tools:sample/avatars" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/dialogElementLayoutLast"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/nameDialogElementText"
+                        style="@style/mainTextMainScreen"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Name" />
+
+                    <TextView
+                        android:id="@+id/lastMessageDialogElementText"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/roboto_medium"
+                        android:text="Name"
+                        android:textColor="@color/grey" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/messageTimeDialogElementText"
+                    style="@style/timeText"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="5"
+                    android:gravity="center"
+                    android:text="time" />
+
+                <TextView
+                    android:id="@+id/isCheckedDialogElementText"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="5"
+                    android:fontFamily="@font/font_awesome_solid"
+                    android:gravity="center"
+                    android:text=""
+                    android:textColor="@color/darkBlue"
+                    android:textSize="10sp" />
+
+            </LinearLayout>
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/messageTimeDialogElementText"
-            style="@style/timeText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:gravity="center"
-            android:text="time" />
-
-        <TextView
-            android:id="@+id/isCheckedDialogElementText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:textSize="10sp"
-            android:gravity="center"
-            android:fontFamily="@font/font_awesome_solid"
-            android:textColor="@color/darkBlue"
-            android:text="" />
-
-    </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 </LinearLayout>
