--- a/app/src/main/res/layout/element_subscription.xml
+++ b/app/src/main/res/layout/element_subscription.xml
@@ -1,39 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/subscriptionElementLayout"
+    xmlns:tools="http://schemas.android.com/tools"
     style="@style/block"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="4dp"
-    android:background="@drawable/block_text"
     tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.adapters.elements.SubscriptionElement">
 
-    <ImageView
-        android:id="@+id/avatarSubscriptionElementImage"
-        android:layout_width="@dimen/photo_avatar_width"
-        android:layout_height="@dimen/photo_avatar_height"
-        android:layout_gravity="center"
-        tools:srcCompat="@tools:sample/avatars" />
-
-    <TextView
-        android:id="@+id/workerNameSubscriptionElementText"
-        android:layout_width="0dp"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/subscriptionElementLayout"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:textColor="@color/black"
-        android:layout_marginStart="4dp"
-        android:layout_weight="1"
-        android:gravity="center_vertical"
-        android:text="@string/name" />
+        android:checkable="true"
+        android:clickable="true"
+        android:focusable="true">
 
-    <CheckBox
-        android:id="@+id/subscribeSubscriptionElementCheckBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:checked="true"
-        android:button="@drawable/selector_heart"
-        app:buttonTint="@color/darkBlue" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:baselineAligned="false"
+            android:orientation="horizontal"
+            android:padding="8dp">
 
+            <ImageView
+                android:id="@+id/avatarSubscriptionElementImage"
+                android:layout_width="@dimen/photo_avatar_width"
+                android:layout_height="@dimen/photo_avatar_height"
+                android:layout_gravity="center"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <TextView
+                android:id="@+id/workerNameSubscriptionElementText"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginStart="4dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="@string/name"
+                android:textColor="@color/black" />
+
+            <CheckBox
+                android:id="@+id/subscribeSubscriptionElementCheckBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:button="@drawable/selector_heart"
+                android:checked="true"
+                app:buttonTint="@color/darkBlue" />
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 </LinearLayout>
