sessions was updated

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,6 +19,7 @@
 
     <dimen name="tags_width">700dp</dimen>
 
+    <dimen name="schedule_button_width">36dp</dimen>
     <dimen name="schedule_button_height">36dp</dimen>
     <dimen name="schedule_button_margin">2dp</dimen>
     <dimen name="button_stroke_width">3dp</dimen>
