--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,6 +24,10 @@
     <dimen name="schedule_button_margin">2dp</dimen>
     <dimen name="button_stroke_width">3dp</dimen>
     <dimen name="button_corner_radius">5dp</dimen>
+
+    <dimen name="sessions_button_margin">8dp</dimen>
+    <dimen name="sessions_button_width">48dp</dimen>
+    <dimen name="sessions_button_height">48dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
