--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -49,7 +49,8 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/nameEditProfileInput"
-                    style="@style/materialInput" />
+                    style="@style/materialInput"
+                    android:inputType="textCapSentences" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -60,7 +61,8 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/surnameEditProfileInput"
-                    style="@style/materialInput" />
+                    style="@style/materialInput"
+                    android:inputType="textCapSentences" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
