--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -180,9 +180,10 @@
 
     <!-- main button on screen -->
     <style name="mainButton" parent="baseButton">
-        <item name="android:width">300dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="cornerRadius">18dp</item>
-        <item name="android:backgroundTint">@color/darkBlue</item>
+        <item name="android:backgroundTint">@color/selector_dark_blue</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
