--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -7,6 +7,7 @@
 
     <LinearLayout
         style="@style/loginPackageMainLinearLayout"
+        android:id="@+id/registrationLinearLayout"
         app:layout_constraintBottom_toTopOf="@+id/saveRegistrationBtn"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
