--- a/app/src/main/res/layout/activity_verify_phone_number.xml
+++ b/app/src/main/res/layout/activity_verify_phone_number.xml
@@ -5,6 +5,7 @@
     style="@style/logInPage"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/verifyPhoneNumberLayout"
     tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.logIn.VerifyPhoneNumberActivity">
 
     <LinearLayout
