--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,11 @@
         <item name="colorAccent">@color/white50</item>
         <item name="android:textColorHint">@color/black</item>
         <item name="colorControlActivated">@color/darkBlue</item>
+        <item name="snackbarStyle">@style/MySnackbar</item>
+    </style>
+
+    <style name="MySnackbar" parent="Widget.MaterialComponents.Snackbar">
+        <item name="android:layout_margin">58dp</item>
     </style>
 
     <style name="allPages" parent="Theme.MaterialComponents.Light.NoActionBar">
