--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -2,8 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/allPages"
     android:id="@+id/serviceMainLayout"
+    style="@style/allPages"
     tools:context="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.activities.service.ServiceActivity">
 
     <include layout="@layout/part_top_panel" />
@@ -42,7 +42,10 @@
 
                 <com.google.android.material.card.MaterialCardView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:checkable="true"
+                    android:clickable="true"
+                    android:focusable="true">
 
                     <LinearLayout
                         android:id="@+id/ratingBlockServiceLayout"
